Hotfix : 데이터 안뜨는 이슈 확인, 대응